--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,12 @@
-  body {
+li { 
+  display: inline; 
+}
+
+
+ /*
+ <li><img id="linkedin" src="assets/images/linkedin_icon.png" style="width:50px; height:50px;" alt="LinkedInIcon" a href="www.linkedin.com/in/david-cejas-61a65924"></a></li>
+
+ body {
     padding: 0;
     margin: 0;
     font-family: georgia, "times new roman", times, serif;
