--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: 'Cuprum', sans-serif;
   font-size: 18px;
   line-height: 34px;
   color: #777;
@@ -33,7 +33,7 @@ p:last-child {
 h1,
 h2,
 h3 {
-  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: 'Play', sans-serif;
   font-weight: 700;
   color: #4aaaa5;
 }
@@ -43,6 +43,7 @@ h1 {
   font-size: 30px;
   line-height: 49px;
   border-bottom: 3px solid #ddd;
+  font-family: 'Play', sans-serif;
 }
 
 h2,
@@ -61,14 +62,15 @@ h3 {
   color: #fff;
   background: #fff;
   border-bottom: 2px solid #ccc;
+  font-family: 'Play', sans-serif;
 }
 
 #logo {
   float: left;
   width: 250px;
   height: 90px;
-  font-family: Georgia, Times, "Times New Roman", serif;
-  font-size: 30px;
+  font-family: 'Play', sans-serif;
+  font-size: 40px;
   font-weight: 700;
   line-height: 90px;
   color: #fff;
@@ -107,6 +109,7 @@ footer {
   text-align: center;
   background: #666;
   border-top: 8px solid #4aaaa5;
+  font-family: 'Play', sans-serif;
 }
 
 /* sidebar */
